development-runs/358/k8s/prod/api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-358.yml -o k8s-358/
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: api
  name: api
  namespace: sme-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-358.yml -o k8s-358/
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: QUOTES_API
              value: http://quotes:5000
          image: ralfx22/sme-api:v2
          name: api
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
