development-runs/358/k8s/prod/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-358.yml -o k8s-358/
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: frontend
  name: frontend
  namespace: sme-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-358.yml -o k8s-358/
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - image: ralfx22/sme-frontend:v2
          name: frontend
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
