development-runs/358/k8s/prod/api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-358.yml -o k8s-358/
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: api
  name: api
  namespace: sme-app
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    io.kompose.service: api
