development-runs/358/k8s/prod/quotes-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: quotes
  namespace: sme-app
  labels:
    io.kompose.service: quotes
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    io.kompose.service: quotes
